# auth-server

./: .gitignore  Auth_Server.Dockerfile  Cargo.toml  README.md  docker-compose.yml  sample.env
.sqlx/: query-99571d2f01513ce8c4e1e03985b9525034a38ba8732eb24e6785caecc0f8ec51.json  query-fe8f7ee4cb9ad2755b226338cbbaca1257f460f503b40b2aa0b56d4af94ea0a1.json
src/: auth.rs  error.rs  lib.rs  main.rs  model.rs  models.rs
src/db/: db_ops.rs  docker-compose.yml  init.sql  passwords.rs  zero_day.rs
