[package]
name = "auth-server"
version = "0.1.1"
edition = "2024"

[dependencies]
# Web framework
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
    "uuid"
] }
uuid = { version = "1.0", features = ["v4"] }

# Environment variables
dotenvy = "0.15"
once_cell = "1.21.3"

# Password hashing
bcrypt = "0.15"


[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'

[[bin]]
name = "auth-server"
path = "src/main.rs"

[[bin]]
name = "zero_day"
path = "src/db/zero_day.rs"
